# LightningRL

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.yml  eval.py  generate.py  index.html  pyproject.toml  rl.py  rl.py.backup
.github/workflows/: deploy-page.yml
accelerate_configs/: 16_node_8_gpus_deepspeed_zero3.yaml  1_node_8_gpus.yaml  1_node_8_gpus_deepspeed_zero1.yaml  1_node_8_gpus_deepspeed_zero3.yaml  2_node_8_gpus_deepspeed_zero3.yaml  4_node_8_gpus_deepspeed_zero3.yaml  8_node_8_gpus_deepspeed_zero3.yaml
configs/: dirl_eval.yaml  eval.yaml  lightningrl.yaml  rl.yaml  rl_dirl_with_value.yaml  rl_sdar_with_value.yaml  sdar_eval.yaml
data/: download_data.py
lightningrl/: config.yaml
models/: __init__.py  logging.py  lr_schedulers.py  sampling.py  value_metrics.py
models/sdar/: __init__.py  configuration_sdar.py  fused_linear_diffusion_cross_entropy.py  modeling_sdar.py  modeling_sdar.py.bak  tokenization_qwen2.py  tokenization_qwen2_fast.py
page/: index.html
reward/: aggregate_data.py  execute.py  math_utils.py  reward.py  rl_aggregate_data.py  rl_code_reward.py  rl_execute.py  rl_reward.py  rl_reward.py.backup
sample/: rl_rollout.py  sample.py  sdar_rl_rollout.py  sdar_sample.py
sample/lmdeploy/: messages.py  setup.py
sample/lmdeploy/pytorch/engine/: engine.py  logits_process.py  model_agent.py
sample/lmdeploy/pytorch/kernels/cuda/: alibi_pagedattention.py
sample/lmdeploy/pytorch/strategies/dllm/: model_agent.py  sequence.py
sample/lmdeploy/serve/: async_engine.py
sample/lmdeploy/serve/openai/: api_server.py
script/: calc_aup.py  occupy_gpu.py  plot_step_token_stats.py  plot_training_metrics.py
scripts/: download_data.sh  eval.sh  train_rl.sh
sdar_eval/results/: performance_stats-1765506795.json  performance_stats-1765506891.json  performance_stats-1765507007.json  performance_stats-1765977517.json  performance_stats-1765977607.json  performance_stats-1765977727.json  performance_stats-1765977835.json  performance_stats-1765978064.json  performance_stats-1765978211.json  performance_stats-1765978367.json  performance_stats-1765978505.json  performance_stats-1766022789.json  performance_stats-1766039548.json  performance_stats-1766039666.json  performance_stats-1766040213.json  performance_stats-1766076419.json  performance_stats-1766076883.json  performance_stats-1766077179.json  performance_stats-1766152719.json  performance_stats-1766163381.json  performance_stats-1766163617.json  performance_stats-1766199698.json  performance_stats-1766200246.json  performance_stats-1766200386.json  performance_stats-1766200526.json  performance_stats-1766200699.json  performance_stats-1766201004.json  performance_stats-1766201210.json  performance_stats-1766286203.json  performance_stats-1766286392.json  performance_stats-1766287129.json  performance_stats-1766287306.json  performance_stats-1766287475.json  performance_stats-1766287780.json  performance_stats-1766287915.json  performance_stats-1766296831.json  performance_stats-1766296944.json  performance_stats-1766297094.json  performance_stats-1766297223.json  performance_stats-1766297515.json  (+12 more)
static/css/: index.css
static/js/: index.js
train/: init_value_model.py  prompting_utils.py  train_policy.py  train_policy_no_value.py  train_sdar_policy.py  train_sdar_value.py  train_sdar_value.py.backup  train_value.py  utils.py
