[project]
name = "lightning-rl"
version = "0.1.0"
description = "LightningRL: Breaking the Accuracy-Parallelism Trade-off of Block-wise dLLMs via Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "GitPython==3.1.45",
    "Jinja2==3.1.6",
    "Levenshtein==0.27.3",
    "Markdown==3.10",
    "MarkupSafe==3.0.3",
    "PyYAML==6.0.3",
    "Pygments==2.19.2",
    "RapidFuzz==3.14.3",
    "Werkzeug==3.1.4",
    "absl-py==2.3.1",
    "accelerate==1.12.0",
    "addict==2.4.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.12.0",
    "apache-tvm-ffi==0.1.3",
    "asttokens==3.0.1",
    "async-timeout==5.0.1",
    "asyncio==4.0.0",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "comm==0.2.3",
    "contourpy==1.3.2",
    "cuda-bindings==13.0.3",
    "cuda-pathfinder==1.3.2",
    "cuda-python==13.0.3",
    "cycler==0.12.1",
    "datasets==4.4.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "deepspeed==0.18.2",
    "dill==0.4.0",
    "distro==1.9.0",
    "editdistance==0.8.1",
    "einops==0.8.1",
    "evaluate==0.4.6",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fastapi==0.127.1",
    "filelock==3.20.3",
    "fire==0.7.1",
    "flash-attn",
    "flashinfer-python==0.5.3",
    "fonttools==4.61.0",
    "frozenlist==1.8.0",
    "fsspec==2025.3.0",
    "gitdb==4.0.12",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "hjson==3.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "ipykernel==7.1.0",
    "ipython==8.37.0",
    "jedi==0.19.2",
    "jiter==0.12.0",
    "joblib==1.5.2",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.9.1",
    "kiwisolver==1.4.9",
    "latex2sympy2_extended==1.10.2",
    "liger_kernel==0.6.4",
    "lmdeploy==0.11.1",
    "markdown-it-py==4.0.0",
    "math-verify==0.8.0",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mmengine-lite==0.10.7",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "multidict==6.7.0",
    "multiprocess==0.70.18",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "nvidia-ml-py==13.580.82",
    "omegaconf==2.3.0",
    "openai==2.14.0",
    "openai-harmony==0.0.8",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "partial-json-parser==0.2.1.1.post7",
    "peft==0.14.0",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "prometheus_client==0.23.1",
    "prompt_toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.33.1",
    "psutil==7.1.3",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pyarrow==22.0.0",
    "pybase64==1.4.3",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "pyparsing==3.2.5",
    "python-Levenshtein==0.27.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "ray==2.53.0",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "rpds-py==0.30.0",
    "safetensors==0.7.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "sentencepiece==0.2.1",
    "sentry-sdk==2.46.0",
    "shellingham==1.5.4",
    "shortuuid==1.0.13",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "termcolor==3.2.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tokenizers==0.21.4",
    "tomli==2.3.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.52.4",
    "triton==3.4.0",
    "typer-slim==0.20.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.40.0",
    "wandb==0.23.0",
    "wcwidth==0.2.14",
    "xgrammar==0.1.29",
    "xxhash==3.6.0",
    "yapf==0.43.0",
    "yarl==1.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
no-build-isolation-package = ["flash-attn"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3%2Bcu12torch2.8cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" }

[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["torch"]
